--- a/css/index.css
+++ b/css/index.css
@@ -10,8 +10,8 @@
   }
   
   body {
-    color: black;
-    background-color: white;
+    color: rgb(248, 248, 248);
+    background-color: rgb(4, 5, 49);
     margin: 0;
     padding: 0;
   }
@@ -28,7 +28,7 @@
     background: #6649b8;
   }
   .navbar::-webkit-scrollbar {
-    width: 0.25rem;
+    width: 0.10rem;
   }
   
   .navbar::-webkit-scrollbar-track {
@@ -65,9 +65,7 @@
     width: 100%;
   }
   
-  .nav-item:last-child {
-    margin-top: auto;
-  }
+ 
   
   .nav-link {
     display: flex;
@@ -204,13 +202,7 @@
     --bg-secondary: #e4e4e4;
   }
   
-  .solar {
-    --text-primary: #576e75;
-    --text-secondary: #35535c;
-    --bg-primary: #fdf6e3;
-    --bg-secondary: #f5e5b8;
-  }
-  
+
   .theme-icon {
     display: none;
   }
@@ -223,7 +215,4 @@
     display: block;
   }
   
-  .solar #solarIcon {
-    display: block;
-  }
-  
+ 
